# symbioz

./: .env.example  ACCESS_OTTO_FROM_PHONE.md  AUTO_CONTROL_DOCUMENT.md  BATCH_FILE_FIX.md  BUILD_LOGS_ACTION_PLAN.md  BUILD_LOGS_DIAGNOSIS.md  CHECK_BUILD_LOGS.md  CHECK_BUILD_STATUS.md  CHECK_INSTALLED_TOOLS.bat  CHECK_SETUP_QUICK.ps1  CHECK_SETUP_STATUS.bat  CHECK_WHAT_INSTALLED.bat  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_STATUS_AND_NEXT_STEPS.md  COMPLETE_TODO_EXECUTION_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  CONTINUING_WORK_SUMMARY.md  CONTROL_CURSOR_AGENT.md  CORPORATE_CRASHOUT_DEPLOYMENT_STATUS.md  CORPORATE_CRASHOUT_GET_UNSTUCK.md  CORPORATE_CRASHOUT_OTTO_READY.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_EXECUTED.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_FIX_COMPLETE.md  DEPLOYMENT_RUN_SUMMARY.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOY_CORPORATE_CRASHOUT_NOW.ps1  DEPLOY_INSTRUCTIONS.md  DEPLOY_WEDDING_NOW.md  DEPLOY_WITHOUT_DNS_AUTOMATION.md  DESKTOP_SHORTCUT_SETUP.md  DNS_FIX_SAFETY_REPORT.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETE_STATUS.md  FINAL_DELIVERABLES_SUMMARY.md  FINAL_DEPLOYMENT_CHECK.md  FINAL_DEPLOYMENT_READY.md  (+161 more)
apps/otto/: .env.example  ACTIVITY_REPORTING_IMPLEMENTATION.md  BUILD_ACTIVITY_REPORTING_TOOL_PROMPT.md  CLEANUP_PLAN.json  CONTROL_OTTO.md  CONTROL_OTTO_LONG_TERM_MEMORY.md  CONTROL_OTTO_META_RULES.md  CONTROL_OTTO_PHASE4_MEMORY_UI_AND_MAINTENANCE.md  DEPLOYMENT_AUTOMATION_SKILL.md  DEPLOYMENT_STATUS_SKILL.md  Dockerfile  FINAL_TEST_REPORT.md  FIXES_APPLIED.md  PHASE2_5_IMPLEMENTATION_SUMMARY.md  PHASE3B_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_SCENARIO_TESTS.md  (+16 more)
(+1084 files in other folders)
